@startuml State Machine
!define STATE(x) state x

skinparam backgroundColor #FEFEFE
skinparam state {
    BackgroundColor LightBlue
    BorderColor Navy
    ArrowColor Navy
}

title Coupon Lifecycle - State Machine

[*] --> UNASSIGNED : Code Generated

UNASSIGNED --> ASSIGNED : assign(user_id)
UNASSIGNED : Entry: code created
UNASSIGNED : State: Available for assignment

ASSIGNED --> LOCKED : lock(user_id)\n[OPTIONAL - for demo/testing]
ASSIGNED --> REDEEMED : redeem(user_id)\n[DIRECT PATH - primary flow]
ASSIGNED --> ASSIGNED : reassign(user_id)
ASSIGNED : Entry: user assigned
ASSIGNED : State: Reserved for user
ASSIGNED : Exit: ownership validated

LOCKED --> ASSIGNED : unlock(user_id)
LOCKED : Entry: temporary hold
LOCKED : State: Demo/testing only
LOCKED : Duration: 5 min timeout
LOCKED : Note: Cannot redeem while locked

REDEEMED --> [*]
REDEEMED : Entry: redemption completed
REDEEMED : State: Permanent
REDEEMED : Action: Log to history
REDEEMED : Count: Increment redemption_count
REDEEMED : Protection: Advisory lock during redemption

note right of UNASSIGNED
  Initial state after:
  - Code generation
  - Code upload
end note

note right of ASSIGNED
  Two redemption paths:
  1. ASSIGNED → REDEEMED (primary)
  2. ASSIGNED → LOCKED → ASSIGNED → REDEEMED (demo)
  
  Lock is optional - used for:
  - Testing concurrency
  - Demonstrating state machine
  - Simulating multi-step checkout
end note

note right of LOCKED
  Advisory locks prevent race conditions
  during redemption, not the LOCKED state.
  
  LOCKED state is purely for demo/testing.
  Redemption uses internal advisory locks
  regardless of coupon state.
end note

note right of LOCKED
  Timeout mechanism:
  - locked_until timestamp
  - Auto-unlock on expiry
  - Prevents deadlocks
  - PostgreSQL advisory locks
end note

note right of REDEEMED
  Final state:
  - Cannot be reversed
  - Audit trail created
  - Multi-redemption check
end note

@enduml
